SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}


Enhancements:

Oracle Plugin: 
   The DDL of a index could be displayed under the source tab.

New plugin "WIKI table configurations":
  This plugin provides some pre-defined configurations for various WIKI engines. With this configurations, Squirrel knows, how to transform the selection
  of a result table into a WIKI table. At the moment, configurations for the following WIKI's are provided:
    - Mediawiki
    - TiddlyWiki
  This plugin is a enhancement for the functionality "Copy as WIKI table"

Copy as WIKI table:
  Squirrel is now able, to copy the selection of a result table as WIKI text into the clipboard. (Right click on the result table => Copy as WIKI table) 
  At the new preferences panel "Global Preferences => Wiki Tables", the user can configure individual templates for the WIKI syntax.

Detached result windows now can be rerun.

Feature Request 3185630: SQL Panel layout:
 - Squirrel uses a vertical layout for the SQL Panel. Now, this layout can be changed to horizontal,
   which might be useful on wide screen displays. This can be configured within the 
   Session Properties and New Session Properties => Tab General => Combo Box: SQL Panel layout 
 - A double click on the divider restores the divider position to the default value.
  

Editing numeric values: Now, Squirrel has the same behavior for signed values for all different numeric data types. 
  A minus sign is allowed only at the first position and if the data type is signed.

Hibernate Plugin: Improved display of mapped objects in table cells:
                  Class name, primary key and toString() ist displayed instead of toString() only.


DB-Diff-Plugin:
  Allowed to compare tables within one Session the same way as with different Sessions using select and
  compare of the Object tree's right mouse menu. It is still possible to compare tables inside the